feat(app): update root layout and module declarations

--- a/src/app/app-root/app.html
+++ b/src/app/app-root/app.html
@@ -1,1 +1,9 @@
-<season-clock></season-clock>
+<main class="main-container">
+  <h1 [title]="'Nice Way Of Making A Hover Title'">
+    {{title}}
+  </h1>
+  <animals></animals>
+  <season-clock></season-clock>
+   <!-- <count-down [user]="user" [startFrom]="startFrom"></count-down> -->
+   <count-down [user]="user"></count-down>
+</main>
