--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,10 +1,8 @@
 .main-container {
     display: grid;
-    justify-items: center;
-
-    height: 90vh;
     max-width: 95vw;
 
+    gap: 10px;
     padding: 1em;
 
     background-color: gray;
@@ -24,5 +22,11 @@
         display: grid;
         width: fit-content;
         border-radius: 1vh;
+    }
+
+    .main-content{
+        display: grid;
+        gap: 10px;
+        justify-content: center;
     }
 }
