--- a/src/app/cmp/season-clock/season-clock.scss
+++ b/src/app/cmp/season-clock/season-clock.scss
@@ -1,13 +1,13 @@
 .season-clock {
     display: grid;
     place-content: center;
-
+    place-self: center;
 
     padding: 1em;
-    width: 60vw;
+    width: fit-content;
     height: 20vh;
 
-text-align: center;
+    text-align: center;
 
     border-radius: 2vh;
     background-color: white;
