--- a/src/app/cmp/watcher-preview/watcher-preview.scss
+++ b/src/app/cmp/watcher-preview/watcher-preview.scss
@@ -3,7 +3,8 @@
     place-items: center;
 
     padding: .5em;
-
+    width: 50px;
+    height: 90px;
 
     border: 1px black solid;
     border-radius: 1vh;
