--- a/src/app/cmp/watchers/watchers-list.scss
+++ b/src/app/cmp/watchers/watchers-list.scss
@@ -1,3 +1,28 @@
+.watchers {
+    display: grid;
+    place-self: center;
+
+    width: 100%;
+    max-width: 70vw;
+
+    padding: 1em;
+    gap: 10px;
+
+    border: 1px solid black;
+
+    button {
+        place-self: center;
+    }
+
+    .watchers-preview-list {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(60px, 1fr));
+        grid-auto-flow: dense;
+
+        gap: 10px;
+    }
+}
+
 dialog {
     div {
         min-width: fit-content;
