--- a/src/app/cmp/watchers/watchers-list.scss
+++ b/src/app/cmp/watchers/watchers-list.scss
@@ -2,10 +2,9 @@
     display: grid;
     place-self: center;
 
-    width: 100%;
-    max-width: 70vw;
+    width: 80vw;
 
-    padding: 1em;
+    padding: 10px 2px;
     gap: 10px;
 
     border: 1px solid black;
@@ -16,15 +15,16 @@
 
     .watchers-preview-list {
         display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(60px, 1fr));
+        grid-template-columns: repeat(auto-fit, minmax(110px, 1fr));
         grid-auto-flow: dense;
 
-        gap: 10px;
+        place-items: center;
+        gap: 5px;
     }
 }
 
 dialog {
-    div {
+    form {
         min-width: fit-content;
         display: grid;
         place-items: center;
