refactor(mouse-tracker): optimize coordinate destructuring and app layout

--- a/src/app/cmp/mouse-tracker/mouse-tracker.html
+++ b/src/app/cmp/mouse-tracker/mouse-tracker.html
@@ -3,12 +3,12 @@
     <section class="movements">
         <label>
             Move X
-            <span class="move-x">{{mouseMoveX}}</span>
+            <span class="move-x">{{cords.x + 'px'}}</span>
         </label>
         <label>
             Move Y
-            <span class="move-y">{{mouseMoveY}}</span>
-        </label>
+            <span class="move-y">{{cords.y + 'px'}}</span>
+        </label> 
 
     </section>
 </div>
